[package]
name = "desub-current"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
thiserror = "1.0.30"
sp_core = { package = "sp-core",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
sp_runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
frame-metadata = { version = "15.0", features = ["v14", "std", "scale-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
codec = { version = "3.0", package = "parity-scale-codec", features = ["bitvec"] }
hex = "0.4.3"
derive_more = "0.99.16"
scale-info = { version = "2.1", features = ["derive", "bitvec"] }
bitvec = { version = "1.0", features = ["serde", "alloc"] }
desub-common = { path = "../desub-common" }

[dev-dependencies]
serde_json = "1"
sp_keyring = { package = "sp-keyring",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
