[package]
name = "desub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

desub-legacy = { path = "../desub-legacy/" }
desub-common = { path = "../desub-common/" }
desub-current = { path = "../desub-current/" }
desub-json-resolver = { path = "../desub-json-resolver/", optional = true }

thiserror = "1.0.30"
frame-metadata = "15.0"
codec = { version = "3.0", package = "parity-scale-codec" }
serde = { version = "1", features = ["derive"] }


[features]
polkadot-js = ["desub-json-resolver", "desub-json-resolver/polkadot", "frame-metadata/legacy" ]
